<resources>

    <string name="app_name">SaludDiaria</string>
    <string name="correo">Correo Electronico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="btnIniciar">Iniciar Sesión</string>
    <string name="Recordar">Recuérdame</string>


    <string name="preguntaPass">¿Olvidaste tu contraseña?</string>
    <string name="recuperarPass">Presiona aquí para recuperarla</string>
    <string name="menuRegistrar">¿No tienes cuenta? Regístrate aquí</string>


    <string name="tituloRecuperarPass">Recuperar contraseña</string>
    <string name="introduceCorreo">Introduce tu correo electrónico para restablecer tu contraseña</string>
    <string name="btnRecuperar">Recuperar</string>
    <string name="envioCorreo">Se te enviará un correo con un enlace para restablecer la contraseña</string>


    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="rcontrasenia">Reingrese contraseña</string>
    <string name="btnRegistrar">Registrar</string>


    <string name="horaEncuesta">Define la hora para la encuesta diaria</string>
    <string name="btnHoraEncuesta">Definir hora</string>


    <string name="tituloEncuesta">Responda las siguientes preguntas</string>


    <string name="responderPreguntas">Responda las siguientes preguntas:</string>
    <string name="pregunta1">1.- ¿Cómo te sentiste hoy en general?</string>}
    <string name="pregunta2">2.- ¿Has tenido fiebre? (temperatura mayor a 38°C)</string>
    <string name="pregunta3">3.- ¿Tienes tos o dificultad para respirar hoy?</string>
    <string name="pregunta4">4.- ¿Has experimentado fatiga o cansancio extremo?</string>
    <string name="pregunta5">5.- ¿Has tenido dolor o presión en el pecho??</string>
    <string name="btnFinalizarEncuesta">Finalizar Encuesta</string>

    <!---Ajustes-->
    <string name="AjustesFoto">Foto</string>
    <string name="DatosCuenta">Actualizar datos de la cuenta</string>
    <string name="HoraEncuesta">Cambiar horario de encuesta</string>
    <string name="AjustarNotificaciones">Ajustar Notificaciones</string>
    <string name="CerrarSesion">Cerrar Sesión</string>

    <!---Actualizar Datos-->
    <string name="InformacionPersonal">Informacion Personal</string>
    <string name="Peso">Peso (kg) </string>
    <string name="Altura">Altura (cm)</string>
    <string name="Edad">Edad</string>
    <string name="correoEjemplo">admin@gmail.com</string>
    <string name="passEjemplo">admin123</string>

    <string name="EncuestaDiaria">Encuesta Diaria</string>
    <string name="CitasMedicas">Citas Médicas</string>
    <string name="btnGuardarCambios">Guardar Cambios</string>

    <string name="DatosInicio">Datos de inicio de sesion</string>
    <string name="NumeroTel">Numero de telefono</string>
    <string name="Editar">Editar</string>
    <string name="btnListo">Listo</string>


    //Menu
    <string name="menuCalendario">Calendario</string>


    <string name="vAgenda">Ver Agenda Médica</string>
    <string name="horasAgendadas">Horas Agendadas</string>
    <string name="nConsulta">Agregar cita médica</string>

    <string name="lugarCitaMedica">Lugar de la cita</string>
    <string name="nombreProfesional">Nombre del doctor/a</string>
    <string name="Especialidad">Especialidad</string>
    <string name="fechaCitaMedica">Fecha de la cita</string>
    <string name="horaCitaMedica">Hora de la cita</string>


    <string name="HINTlugarCitaMedica">Clinica Atacama</string>
    <string name="HINTnombreProfesional">Carlos Pezo Correa</string>
    <string name="HINTEspecialidad">Dermatologia</string>
    <string name="HINTfechaCitaMedica">Lunes 23 de septiembre</string>
    <string name="HINThoraCitaMedica">20:00</string>

    <string name="btnAgendarCitaMedica">Guardar cita médica</string>


    <string name="menuHidratacion">Hidratación</string>


    <string name="menuEmergencia">Emergencía SOS</string>


    <string name="menuMedicamentos">Medicamentos</string>


    <string name="menuFichaMedica">Ficha Médica</string>

    <string name="Lunes">L</string>
    <string name="Martes">M</string>
    <string name="Miercoles">M</string>
    <string name="Jueves">J</string>
    <string name="Viernes">V</string>
    <string name="Sabado">S</string>
    <string name="Domingo">D</string>

    <string name="Daily">Consumo Diario</string>
    <string name="PreguntaAgua">¿Cuanta agua consumiste?</string>
    <string name="cantidadAgua">250ml</string>
    <string name="btnActualizar">Actualizar</string>


    <string name="inserteNombre">Nombre</string>
    <string name="PadecimientosMedicos">Padecimientos Médicos</string>
    <string name="DetallesMedicos">Detalles Médicos</string>
    <string name="Alergias">Alergias</string>
    <string name="Medicamentos">Medicamentos</string>

    <string name="EmergenciaSOS">Emergencia SOS</string>
    <string name="TelefonosEmergenciaNacional">Teléfonos de Emergencia (Nacional)</string>
    <string name="SAMU">SAMU</string>
    <string name="Bomberos">Bomberos</string>
    <string name="Carabineros">Carabineros</string>
    <string name="TusContactosEmergencia">Tus Contactos de Emergencia</string>
    <string name="Mama">Mamá</string>
    <string name="Llamar">Llamar</string>
    <string name="AgregarContactoEmergencia">Agregar Contacto de Emergencia</string>

    <string name="Agregarmedicamento">Agregar Medicamento</string>

    <string name="nombreMedicamento">Nombre del medicamento</string>
    <string name="Paracetamol">Paracetamol</string>
    <string name="TipoDeMedicamento">Tipo de medicamento</string>
    <string name="Pastilla">Pastilla</string>
    <string name="IntensidadDelMedicamento">Intensidad del medicamento</string>
    <string name="AgregarConcentracion">Agregar concentración</string>
    <string name="mg">500mg</string>
    <string name="CuandoLoDebesTomar">¿Cuándo lo debes tomar?</string>
    <string name="Frecuencia">Frecuencia</string>
    <string name="TodosLosDias">Todos los días</string>
    <string name="Horas">Horas</string>


    <string name="ajustesPerfil">Perfil</string>
    <string name="ajustesNotificaciones">Notificaciones</string>
    <string name="ajustesHoraEncuesta">Hora Encuesta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btnAgregarContacto">Agregar Contacto</string>

    <string name="hintEmergencias">Ingrese número de emergencia</string>
    <string name="AgregarContacto">Agregar Contacto</string>

    <string name="horaMedAM">11:00AM</string>
    <string name="horaMedPM">23:00PM</string>
</resources>