<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CitaMedica">

    <TextView
        android:id="@+id/textView43"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lugarCitaMedica"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etLugar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/HINTlugarCitaMedica"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreProfesional"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNombreDoc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/HINTnombreProfesional"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Especialidad"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEspecialidad"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/HINTEspecialidad"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fechaCitaMedica"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etFechaCita"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/HINTfechaCitaMedica"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horaCitaMedica"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etHoraCita"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/HINThoraCitaMedica"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button17"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAgendarCitaMedica" />

</LinearLayout>