<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título para los días de la semana -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Meta Semanal"
        android:textAlignment="center"
        android:textColor="@color/titulosblue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Contenedor para los días de la semana -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLunes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/Lunes" />

        <TextView
            android:id="@+id/tvMartes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="8dp"
            android:text="@string/Martes" />

        <TextView
            android:id="@+id/tvMiercoles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="8dp"
            android:text="@string/Miercoles" />

        <TextView
            android:id="@+id/tvJueves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="8dp"
            android:text="@string/Jueves" />

        <TextView
            android:id="@+id/tvViernes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="8dp"
            android:text="@string/Viernes" />

        <TextView
            android:id="@+id/tvSabado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="8dp"
            android:text="@string/Sabado" />

        <TextView
            android:id="@+id/tvDomingo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/Domingo" />

    </LinearLayout>

    <!-- Círculo de progreso -->
    <TextView
        android:id="@+id/DailyWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Daily"
        android:textAlignment="center"
        android:textColor="@color/titulosblue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressCircle"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:indeterminate="false"
        android:max="2000"
        android:progress="0"
        android:progressDrawable="@drawable/progress_circle" />

    <!-- Entrada de ml tomados -->
    <TextView
        android:id="@+id/textView45"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PreguntaAgua"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etMlTomados"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/cantidadAgua"
        android:inputType="number"
        android:textAlignment="center" />

    <!-- Botón para actualizar el progreso -->
    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/letrasblue"
        android:text="@string/btnActualizar" />
</LinearLayout>
