<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView43"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/titulosblue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreMedicamento"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombre_med"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/Paracetamol"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TipoDeMedicamento"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_tipo_med"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/Pastilla"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntensidadDelMedicamento"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_intensidad_med"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/mg"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/CuandoLoDebesTomar"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView39"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Frecuencia"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerFrecuencia"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/frecuencia"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView64"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Horas"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_hora_am"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/horaMedAM"
                android:inputType="time"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_hora_pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/horaMedPM"
                android:inputType="time"
                android:textAlignment="center" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/letrasblue"
            android:text="@string/btnListo" />

    </LinearLayout>
</ScrollView>
