<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabcalendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tabop1"
            android:text="@string/menuCalendario" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabhidratacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tabop2"
            android:text="@string/menuHidratacion" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabmedicamentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tabop3"
            android:text="@string/menuMedicamentos" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabfichamedica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tabop4"
            android:text="@string/menuFichaMedica" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabemergencias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/tabop5"
            android:text="@string/menuEmergencia" />
    </com.google.android.material.tabs.TabLayout>
</LinearLayout>